--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,12 @@ android {
             buildConfigField("String","FLAVOUR_TYPE","\"JAJPUR\"")
             buildConfigField("String", "BASE_URL", "\"http://distdms-jajpur.com/\"")
         }
+        anugul {
+            dimension "das"
+//            applicationIdSuffix ".jpr"
+            buildConfigField("String","FLAVOUR_TYPE","\"ANUGUL\"")
+            buildConfigField("String", "BASE_URL", "\"http://117.247.252.92/das_angul/\"")
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
